--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,5 @@
 name: New Release
+
 on:
   workflow_dispatch:
   release:
@@ -18,7 +19,7 @@ jobs:
         run: npm ci
 
       - name: Publish to npm
-      - run: npm publish --access public
+        run: npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
